// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the H3 component should accept additional props 1`] = `
<Text
  accessible={false}
  style={
    Object {
      "color": "#303030",
      "fontFamily": "InterUI-Black",
      "fontSize": 24,
      "lineHeight": 27.6,
    }
  }
>
  "The Christian shoemaker does his duty not by putting little crosses on the shoes, but by making good shoes, because God is interested in good craftsmanship." ― Martin Luther
</Text>
`;

exports[`the H3 component should accept and render passed in styles 1`] = `
<Text
  style={
    Object {
      "color": "salmon",
      "fontFamily": "InterUI-Black",
      "fontSize": 24,
      "lineHeight": 27.6,
    }
  }
>
  Salmon text
</Text>
`;

exports[`the H3 component should render a loading state 1`] = `
<View
  style={
    Object {
      "alignSelf": "stretch",
      "backgroundColor": "#A5A5A5",
      "borderRadius": 16,
      "height": 24,
      "marginVertical": 1.8000000000000007,
      "width": "100%",
    }
  }
/>
`;

exports[`the H3 component should render a loading state with correct positioning (margins) 1`] = `
<View
  style={
    Object {
      "alignSelf": "stretch",
      "backgroundColor": "#A5A5A5",
      "borderRadius": 16,
      "height": 24,
      "marginBottom": 17.28,
      "marginTop": 25.92,
      "marginVertical": 1.8000000000000007,
      "width": "100%",
    }
  }
/>
`;

exports[`the H3 component should render correctly 1`] = `
<Text
  style={
    Object {
      "color": "#303030",
      "fontFamily": "InterUI-Black",
      "fontSize": 24,
      "lineHeight": 27.6,
    }
  }
>
  Default H3 text
</Text>
`;

exports[`the H3 component should render with correct padding 1`] = `
<Text
  padded={true}
  style={
    Object {
      "color": "#303030",
      "fontFamily": "InterUI-Black",
      "fontSize": 24,
      "lineHeight": 27.6,
      "paddingBottom": 17.28,
      "paddingTop": 25.92,
    }
  }
>
  Padded H3 text
</Text>
`;
